--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/justinnp/SporSight-backend#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-azure-ad": "^4.0.0"
