--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/justinnp/SporSight-backend#readme",
   "dependencies": {
+    "azure-storage": "^2.10.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "multer": "^1.4.1",
     "nodemon": "^1.18.9",
