--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.1",
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
-    "passport-azure-ad": "^4.0.0"
+    "passport-azure-ad": "^4.0.0",
+    "tedious": "^4.1.3"
   }
 }
